Removed UISlider because it was not being rendered correctly on a real device, replaced by a custom UIView

--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -842,21 +842,6 @@
                                                     <color key="textColor" red="0.43787151575088501" green="0.32177186012268066" blue="0.27448359131813049" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ygE-Md-fB1">
-                                                    <rect key="frame" x="66" y="15" width="458" height="31"/>
-                                                    <color key="minimumTrackTintColor" red="0.85882352939999995" green="0.33725490200000002" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <color key="maximumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="showThumbImage" value="NO"/>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="yScale">
-                                                            <real key="value" value="8"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="color" keyPath="rightColor">
-                                                            <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </slider>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JW0-s2-RmX">
                                                     <rect key="frame" x="522" y="18" width="60" height="23.5"/>
                                                     <constraints>
@@ -866,23 +851,38 @@
                                                     <color key="textColor" red="0.43787151575088501" green="0.32177186012268066" blue="0.27448359131813049" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p0V-fL-VuA" customClass="HorizontalGraphBar" customModule="malaria_ios" customModuleProvider="target">
+                                                    <rect key="frame" x="68" y="22.5" width="454" height="15"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="ZoF-ij-OS7"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="progressValue">
+                                                            <real key="value" value="50"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="progressColor">
+                                                            <color key="value" red="0.85882352939999995" green="0.33725490200000002" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="JW0-s2-RmX" secondAttribute="trailing" constant="10" id="5HE-cf-Nzv"/>
                                                 <constraint firstItem="gRa-ua-81B" firstAttribute="leading" secondItem="kJZ-ry-5pf" secondAttribute="leadingMargin" constant="10" id="Iuz-g2-Vt5"/>
-                                                <constraint firstItem="JW0-s2-RmX" firstAttribute="centerY" secondItem="ygE-Md-fB1" secondAttribute="centerY" id="X9R-K6-kfT"/>
-                                                <constraint firstItem="ygE-Md-fB1" firstAttribute="leading" secondItem="gRa-ua-81B" secondAttribute="trailing" id="ebi-BD-nKe"/>
-                                                <constraint firstItem="JW0-s2-RmX" firstAttribute="leading" secondItem="ygE-Md-fB1" secondAttribute="trailing" id="fbe-LZ-49L"/>
+                                                <constraint firstItem="p0V-fL-VuA" firstAttribute="centerY" secondItem="gRa-ua-81B" secondAttribute="centerY" id="JFr-uh-0t3"/>
+                                                <constraint firstItem="p0V-fL-VuA" firstAttribute="centerY" secondItem="JW0-s2-RmX" secondAttribute="centerY" id="XaV-GA-rut"/>
                                                 <constraint firstAttribute="centerY" secondItem="gRa-ua-81B" secondAttribute="centerY" id="gaC-h0-PGx"/>
-                                                <constraint firstItem="ygE-Md-fB1" firstAttribute="centerY" secondItem="gRa-ua-81B" secondAttribute="centerY" id="xyk-wF-8we"/>
+                                                <constraint firstItem="JW0-s2-RmX" firstAttribute="leading" secondItem="p0V-fL-VuA" secondAttribute="trailing" id="rio-qj-HCW"/>
+                                                <constraint firstItem="p0V-fL-VuA" firstAttribute="leading" secondItem="gRa-ua-81B" secondAttribute="trailing" id="xko-i9-7Fa"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="adherenceValue" destination="JW0-s2-RmX" id="sUP-SX-wbk"/>
+                                            <outlet property="horizontalBar" destination="p0V-fL-VuA" id="Ze8-Yc-UY1"/>
                                             <outlet property="month" destination="gRa-ua-81B" id="its-XG-uyL"/>
-                                            <outlet property="slider" destination="ygE-Md-fB1" id="Wfd-oL-FWi"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
